tests/passing/declare_parameter_shadowing.tails
func a(a': unit) -> unit:
  pass

func b(a': unit) -> unit:
  pass

func tests() -> unit:
  a(pass)
  b(pass)
