tests/failing/generics_hints_missing.tails
func a<T>() -> unit:
  pass

func tests() -> unit:
  a()
